smal lfix on PurchaseOrders/PartialDetails

--- a/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_MessageBoxPartial.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_MessageBoxPartial.cshtml
@@ -1,10 +1,10 @@
 @using CriticalPath.Web.Models
 @using CriticalPath.Data
 @using CP.i8n
-<div class="modal fade" id="messageBox"> @* Message Box *@
+<div class="modal fade" id="messageBox">    @* Message Box *@
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header modal-header-info">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h2 id="messageBoxTitle" class="modal-title"></h2>
             </div>
@@ -20,10 +20,10 @@
     </div>@* /.modal-dialog *@
 </div>@* /.modal *@
 
-<div class="modal fade" id="deleteConfirm"> @* Delete Confirm Dialog *@
+<div class="modal fade" id="deleteConfirm">    @* Delete Confirm Modal *@
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header modal-header-danger">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h2 class="modal-title">@ActionStrings.Delete</h2>
             </div>
@@ -33,6 +33,22 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">@ActionStrings.Cancel</button>
                 <a id="ajxDelete" style="width:70px" class="btn btn-danger" onclick="deleteEntity(0);">@ActionStrings.Delete</a>
+            </div>
+        </div>@* /.modal-content *@
+    </div>@* /.modal-dialog *@
+</div>@* /.modal *@
+
+<div class="modal fade" id="dataInputModal">    @* Data Input Modal *@
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header modal-header-primary">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h2 id="dataInputTitle" class="modal-title">@ActionStrings.Edit</h2>
+            </div>
+            <div id="dataInputBody" class="modal-body"></div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">@ActionStrings.Cancel</button>
+                <a id="dataInputSubmit" style="width:70px" class="btn btn-primary" onclick="submitDataInputForm();">@ActionStrings.Submit</a>
             </div>
         </div>@* /.modal-content *@
     </div>@* /.modal-dialog *@
