--- a/Source/CriticalPath.Web/Views/PurchaseOrders/PartialDetails.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/PartialDetails.cshtml
@@ -39,10 +39,10 @@
 </div>
 <div class="row mb5">
     <label class="control-label col-md-2 col-sm-3 mb5">
-        @Html.DisplayNameFor(model => model.KimballNr)
+        @Html.DisplayNameFor(model => model.CustomerRefNr)
     </label>
     <div class="col-md-10 col-sm-9 mt10">
-        @Html.DisplayFor(m => m.KimballNr)
+        @Html.DisplayFor(m => m.CustomerRefNr)
     </div>
 </div>
 <div class="row">
