PurchaseOrders/Index started to use modal data input forms

--- a/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_IndexScriptsPartial.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_IndexScriptsPartial.cshtml
@@ -5,6 +5,7 @@
 <script type="text/javascript">
     function setDelete(item, id) {
         $('#deleteText').html('@MessageStrings.YouAreAboutToDelete ' + item + '.<br/>@MessageStrings.AreYouSure?');
+        @*$('#deleteButton').attr('href', '/@Model/Delete/' + id);*@
         $('#ajxDelete').attr('onclick', 'ajaxDelete(' + id + ')');
     }
     function ajaxDelete(id) {
@@ -43,5 +44,43 @@
     function showCannotDelete(item, relatedRecords) {
         var msgText = '@MessageStrings.CanNotDelete ' + item + '.<br/>@MessageStrings.BecauseOfRelatedRecords.<br/>' + relatedRecords;
         showMessageBox('@MessageStrings.UnableToDelete!', msgText, true);
+    }
+    function toogleAccordionSign() {
+        if ($('#filterPanel').hasClass('in')) {
+            $('#filterPanelSign').removeClass('glyphicon-minus').addClass('glyphicon-plus');
+            console.log('collapsed');
+        }
+        else {
+            $('#filterPanelSign').removeClass('glyphicon-plus').addClass('glyphicon-minus');
+            console.log('expanded');
+        }
+    }
+    function submitDataInputForm() {
+        var inputForm = $('#dataInputForm');
+        if ($(inputForm).valid()) {
+            var url = $(inputForm).attr('action');
+            url += (url.indexOf('?') == -1) ? '?' : '&';
+            url += 'modal=true';
+            $.ajax({
+                url: url,
+                type: $(inputForm).attr('method'),
+                data: $(inputForm).serialize(),
+				cache: false,
+                success: function (result) {
+                    if (result.saved) {
+                        refreshData();
+                        $('#dataInputModal').modal('hide');
+                    }
+                    else {
+                        $('#dataInputBody').html(result);
+                    }
+                },
+                error: function (jqXHR, textStatus, errorThrown) {
+                    $('#dataInputModal').modal('hide');
+                    var msgboxMsg = jqXHR.responseText;
+                    showMessageBox(errorThrown, msgboxMsg, true);
+                }
+            });
+        }
     }
 </script>
