--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Create.cshtml
@@ -190,7 +190,7 @@
                 {
                     <div class="col-xs-12 visible-xs mb5 mt5"></div>
                     <div class="col-sm-2 col-md-1 pl0">
-                        <label class="btn pt0 pb0 pl0 pr0" style="max-height:53px;margin-top:-5px;overflow:hidden;"
+                        <label class="btn pt0 pb0 pl0 pr0 thumbInListWrapper"
                                onclick="showImage('@Html.Encode(Model.Product.ProductCode)', '@Model.ProductImage', false)">
                             <img src='@Model.ProductThumb' alt='@Model.ProductCode' style="margin-top:-5px;width:100%" class="pull-right" />
                         </label>
