--- a/Source/CriticalPath.Web/Views/POShipments/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/POShipments/Index.cshtml
@@ -17,109 +17,67 @@
     int pageSize = ViewBag.pageSize;
     int pageCount = ViewBag.pageCount;
 
-    var title = EntityStrings.POShipments;
+    int purchaseOrderId = ViewBag.purchaseOrderId ?? 0;
 
-    int total = 0;
-    int shipped = 0;
-    int delivered = 0;
+    var title = EntityStrings.POShipments;
 }
-<div class="row well hidden-print">
-    <div class="col-md-8 col-sm-7">
-        <h4>@title</h4>
-    </div>
-    @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "searchForm" }))
-    {
-        @Html.Hidden("page", page)
-        @Html.Hidden("pageSize", pageSize)
-        <div class="col-md-4 col-sm-5">
-            @Html.Partial("_SearchBoxPartial")
+<div class="well hidden-print">
+    <div class="row">
+        <div class="col-md-6 col-sm-5">
+            <h4>@title</h4>
         </div>
-    }
-</div>
-@if (totalCount > 0)
-{
-    <div id="pOShipmentGridParent" class="table-responsive">
-        <table id="pOShipmentGrid" class="table table-striped table-bordered table-hover">
-            <tr>
-                <th class="hidden-print" width="20px">@ActionStrings.Action</th>
-                <th>@Html.DisplayNameFor(model => model.ShippingNr)</th>
-                <th>@Html.DisplayNameFor(model => model.ShippingDate)</th>
-                <th>@Html.DisplayNameFor(model => model.DeliveryNr)</th>
-                <th>@Html.DisplayNameFor(model => model.DeliveryDate)</th>
-                <th>@Html.DisplayNameFor(model => model.DestinationNr)</th>
-                <th>@Html.DisplayNameFor(model => model.RefCode)</th>
-                <th>@Html.DisplayNameFor(model => model.CustomerRefNr)</th>
-                <th>@Html.DisplayNameFor(model => model.Quantity)</th>
-                <th>@Html.DisplayNameFor(model => model.IsShipped)</th>
-                <th>@Html.DisplayNameFor(model => model.IsDelivered)</th>
-                <th>@Html.DisplayNameFor(model => model.PurchaseOrder)</th>
-                <th>@Html.DisplayNameFor(model => model.FreightTerm)</th>
-            </tr>
-            @foreach (var item in Model)
-            {
-                total += item.Quantity;
-                shipped = item.IsShipped ? shipped + item.Quantity : shipped;
-                delivered = item.IsDelivered ? delivered + item.Quantity : delivered;
-                <tr>
-                    <td class="hidden-print">
-                        <div class="btn-group">
-                            <button type="button" title="@ActionStrings.Action" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" onclick='onActionMenuClick(this)'>
-                                <span class="glyphicon glyphicon-tasks"></span> <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li>@Html.ActionLink(ActionStrings.Details, "Details", new { id = item.Id })</li>
-                                @if (canUserEdit)
-                                {
-                                    <li>@Html.ActionLink(ActionStrings.Edit, "Edit", new { id = item.Id })</li>
-                                }
-                                @if (canUserDelete)
-                                {
-                                    <li>
-                                        <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@Html.Encode(item.ModifierId)</b>', @item.Id);">
-                                            @ActionStrings.Delete
-                                        </a>
-                                    </li>
-                                }
-                            </ul>
-                        </div>
-                    </td>
-                    <td>@Html.DisplayFor(modelItem => item.ShippingNr)</td>
-                    <td align="right">@Html.DisplayFor(modelItem => item.ShippingDate)</td>
-                    <td>@Html.DisplayFor(modelItem => item.DeliveryNr)</td>
-                    <td align="right">@Html.DisplayFor(modelItem => item.DeliveryDate)</td>
-                    <td>@Html.DisplayFor(modelItem => item.DestinationNr)</td>
-                    <td>@Html.DisplayFor(modelItem => item.RefCode)</td>
-                    <td>@Html.DisplayFor(modelItem => item.CustomerRefNr)</td>
-                    <td align="right">@item.Quantity.ToString("###,###")</td>
-                    <td>@Html.DisplayFor(modelItem => item.IsShipped)</td>
-                    <td>@Html.DisplayFor(modelItem => item.IsDelivered)</td>
-                    <td>@Html.DisplayFor(modelItem => item.PurchaseOrder)</td>
-                    <td>@Html.DisplayFor(modelItem => item.FreightTerm)</td>
-                </tr>
-            }
-            <tr class="bottom-row">
-                <td class="hidden-print"></td>
-                <td colspan="5">
-                    Total Records: @totalCount
-                    Seen: @Model.Count()
-                </td>
-                <td align="right" colspan="2">Total Quantities</td>
-                <td class="text-right">@total.ToString("###,###")</td>
-                <td class="text-right">@shipped.ToString("###,###")</td>
-                <td class="text-right">@delivered.ToString("###,###")</td>
-            </tr>
-        </table>
+        @if (purchaseOrderId > 0)
+        {
+            <div class="col-sm-2">
+                @Html.ActionLink(ActionStrings.AddNew, "Create", new { purchaseOrderId = purchaseOrderId}, new { @class = "btn btn-primary", input_modal = EntityStrings.AddNewPOShipment })
+            </div>
+        }
+       
+        @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "searchForm" }))
+        {
+            @Html.Hidden("page", page)
+            @Html.Hidden("pageSize", pageSize)
+            <div class="col-md-4 col-sm-5">
+                @Html.Partial("_SearchBoxPartial")
+            </div>
+        }
     </div>
-}
-else
-{
-    <h4>@MessageStrings.NoResults!</h4>
-}
-@Html.Partial("_PagerPartial")
+</div>
+<div id="pOShipmentGridParent" class="table-responsive">
+    @Html.Partial("_Index")
+</div>
 @Html.Partial("_MessageBoxPartial")
 @section scripts{
+    @Scripts.Render("~/bundles/jqueryval")
     @Html.Partial("_IndexScriptsPartial", "POShipments") @* Controller's name *@
     <script type="text/javascript">
+        (function () {
+            $.ajaxSetup({
+                cache: false
+            });
+            $('a[input-modal]').on('click', function () {
+                showMessageBox('@MessageStrings.Loading...', '@MessageStrings.PleaseWait.', false);
+                var title = $(this).attr("input-modal");
+                var url = this.href;
+                url += (url.indexOf('?') == -1) ? '?' : '&';
+                url += 'modal=true';
+                $('#dataInputBody').load(url, function () {
+                    hideMessageBox();
+                    if (title != null || title != '') {
+                        $('#dataInputTitle').html(title);
+                    }
+                    var inputForm = document.getElementById('dataInputForm');
+                    if (isNaN(inputForm)) {
+                        $('#dataInputFooter').show();
+                    }
+                    else {
+                        $('#dataInputFooter').hide();
+                    }
+                    $('#dataInputModal').modal('show');
+                });
+                return false;
+            });
+        }());
         function onActionMenuClick(menuBtn) {
             setTimeout(function () {
                 var menuHeight = 160;
