--- a/Source/CriticalPath.Web/Views/PurchaseOrders/_ProductSizingPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/_ProductSizingPartial.cshtml
@@ -16,7 +16,7 @@
 @Html.HiddenFor(m => m.SizeRate11Id)
 @Html.HiddenFor(m => m.SizeRate12Id)
 <div class="form-group">
-    @Html.LabelFor(model => model.SizingStandardId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+    @Html.LabelFor(model => model.SizingStandardId, htmlAttributes: new { @class = "control-label col-md-3 col-sm-3" })
     <div class="col-lg-5 col-md-6 col-sm-7">
         @if (Model.SizingStandardId > 0)
         {
@@ -30,8 +30,8 @@
     </div>
 </div>
 <div class="form-group">
-    <label class="control-label col-lg-2 col-md-3 col-sm-3">@EntityStrings.SizeRatios</label>
-    <div class="col-lg-7 col-md-8 col-sm-9">
+    <label class="control-label col-md-3 col-sm-3">@EntityStrings.SizeRatios</label>
+    <div class="col-sm-9">
         <div class="col-xs-2 pl0 mb5">
             @Html.EditorFor(m => m.Size1Caption, new { htmlAttributes = new { @class = "form-control", autocomplete = "off", @readonly = "readonly", disabled = "true" } })
         </div>
@@ -107,7 +107,7 @@
     </div>
 </div>
 <div class="form-group">
-    @Html.Label(EntityStrings.POSizeRatio, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+    @Html.Label(EntityStrings.POSizeRatio, htmlAttributes: new { @class = "control-label col-md-3 col-sm-3" })
     <div class="col-lg-2 col-md-3 col-sm-3">
         <input id="SizeRatioDivisorDisplay" class="form-control text-right"
                type="number" readonly="readonly" autocomplete="off" value="0" />
@@ -116,7 +116,7 @@
     </div>
 </div>
 <div class="form-group">
-    @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+    @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-3 col-sm-3" })
     <div class="col-lg-2 col-md-3 col-sm-3">
         @Html.EditorFor(m => m.Quantity, new { htmlAttributes = new { @class = "form-control text-right" } })
         @Html.ValidationMessageFor(m => m.Quantity, "", new { @class = "text-danger" })
