--- a/Source/CriticalPath.Web/Views/Shared/_AllPriceEdit.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_AllPriceEdit.cshtml
@@ -3,7 +3,7 @@
 @using CP.i8n
 @model IAllPrice
 <div class="form-group">
-    @Html.Label(EntityStrings.UnitPrice, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
+    @Html.Label(EntityStrings.UnitPrice, htmlAttributes: new { @class = "control-label col-md-3 col-sm-3 col-xs-12" })
     <div class="col-lg-2 col-md-3 col-sm-3 col-xs-7">
         @{ Html.EnableClientValidation(false); }
         @Html.EditorFor(m => m.UnitPrice, new { htmlAttributes = new { @class = "form-control text-right", autocomplete = "off" } })
@@ -18,7 +18,7 @@
 @if (AppSettings.Settings.ShowSecondaryPrices)
 {
     <div class="form-group">
-        @Html.Label(EntityStrings.UnitPrice2, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
+        @Html.Label(EntityStrings.UnitPrice2, htmlAttributes: new { @class = "control-label col-md-3 col-sm-3 col-xs-12" })
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-7">
             @{ Html.EnableClientValidation(false); }
             @Html.EditorFor(m => m.UnitPrice2, new { htmlAttributes = new { @class = "form-control text-right", autocomplete = "off" } })
@@ -33,7 +33,7 @@
 }
 
 <div class="form-group">
-    @Html.Label(EntityStrings.LicensorPrice, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
+    @Html.Label(EntityStrings.LicensorPrice, htmlAttributes: new { @class = "control-label col-md-3 col-sm-3 col-xs-12" })
     <div class="col-lg-2 col-md-3 col-sm-3 col-xs-7">
         @{ Html.EnableClientValidation(false); }
         @Html.EditorFor(m => m.LicensorPrice, new { htmlAttributes = new { @class = "form-control text-right", autocomplete = "off" } })
@@ -47,7 +47,7 @@
 </div>
 
 <div class="form-group">
-    @Html.Label(EntityStrings.BuyingPrice, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
+    @Html.Label(EntityStrings.BuyingPrice, htmlAttributes: new { @class = "control-label col-md-3 col-sm-3 col-xs-12" })
     <div class="col-lg-2 col-md-3 col-sm-3 col-xs-7">
         @{ Html.EnableClientValidation(false); }
         @Html.EditorFor(m => m.BuyingPrice, new { htmlAttributes = new { @class = "form-control text-right", autocomplete = "off" } })
@@ -62,7 +62,7 @@
 @if (AppSettings.Settings.ShowSecondaryPrices)
 {
     <div class="form-group">
-        @Html.Label(EntityStrings.BuyingPrice2, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
+        @Html.Label(EntityStrings.BuyingPrice2, htmlAttributes: new { @class = "control-label col-md-3 col-sm-3 col-xs-12" })
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-7">
             @{ Html.EnableClientValidation(false); }
             @Html.EditorFor(m => m.BuyingPrice2, new { htmlAttributes = new { @class = "form-control text-right", autocomplete = "off" } })
@@ -77,7 +77,7 @@
 }
 
 <div class="form-group">
-    @Html.Label(EntityStrings.RoyaltyFee, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
+    @Html.Label(EntityStrings.RoyaltyFee, htmlAttributes: new { @class = "control-label col-md-3 col-sm-3 col-xs-12" })
     <div class="col-lg-2 col-md-3 col-sm-3 col-xs-7">
         @{ Html.EnableClientValidation(false); }
         @Html.EditorFor(m => m.RoyaltyFee, new { htmlAttributes = new { @class = "form-control text-right", autocomplete = "off" } })
@@ -93,7 +93,7 @@
 @if (AppSettings.Settings.ShowRetailPrice)
 {
     <div class="form-group">
-        @Html.Label(EntityStrings.RetailPrice, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
+        @Html.Label(EntityStrings.RetailPrice, htmlAttributes: new { @class = "control-label col-md-3 col-sm-3 col-xs-12" })
         <div class="col-lg-2 col-md-3 col-sm-3 col-xs-7">
             @{ Html.EnableClientValidation(false); }
             @Html.EditorFor(m => m.RetailPrice, new { htmlAttributes = new { @class = "form-control text-right", autocomplete = "off" } })
