Small fix on ClearFilter JS function

--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
@@ -517,6 +517,7 @@ else
             $('#DueDateMax').val('');
             $('#SupplierDueDateMin').val('');
             $('#SupplierDueDateMax').val('');
+            $('#SearchString').val('');
 
             setSelectListID('#CustomerId > option', '');
             setSelectListID('#CustomerDepartmentId > option', '');
